--- a/package.json
+++ b/package.json
@@ -3,13 +3,59 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.5",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "axios": "^0.21.4",
+    "babel-loader": "8.1.0",
+    "bootstrap": "^5.1.1",
+    "chart.js": "^3.6.2",
+    "classnames": "^2.3.1",
+    "connected-react-router": "^6.9.2",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "2.10.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "firebase": "4.12.1",
+    "history": "^5.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "material-ui": "^0.20.2",
+    "moment": "^2.29.1",
+    "node-sass": "^7.0.0",
+    "path": "^0.12.7",
+    "prettier-eslint": "^13.0.0",
+    "prettier-eslint-cli": "^5.0.1",
+    "prop-types": "^15.8.0",
+    "react": "16.5.2",
+    "react-bootstrap": "^1.6.4",
+    "react-chartjs-2": "^4.0.0",
+    "react-dom": "16.5.2",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^7.2.6",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "4.3.1",
+    "react-s-alert": "1.4.1",
+    "react-scripts": "1.1.5",
+    "react-social-login-buttons": "^3.6.0",
+    "reactstrap": "^9.0.1",
+    "recompose": "^0.30.0",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-observable": "^2.0.0",
+    "redux-thunk": "^2.4.1",
+    "underscore": "^1.13.2",
+    "validate.js": "^0.13.1",
+    "web-vitals": "^1.0.1",
+    "webpack": "4.44.2",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "3.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
